[package]
name = "qcomms"
version = "0.2.0"
authors = ["Jose Salazar <znx3p0@gmail.com>"]
edition = "2018"

license = "MPL-2.0"
documentation = "https://docs.rs/qcomms/"
repository = "https://github.com/znx3p0/qcomms"
description = """
qcomms is a small library that offers a simple message passing trait.
it also offers keepalive and other stream helpers.
"""

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = { version = "0.1", optional = true }
serde = { version = "1.0", optional = true }
bincode = { version = "1.3", optional = true }
tokio = { version = "1", features = [ "net", "io-util" ], optional = true }

[dev-dependencies]
tokio = { version = "1", features = [ "full" ] }
serde = { version = "1.0", features = ["derive"] }

[features]
default = []
full = [ "asynct", "obj" ]
asynct = [ "tokio", "async-trait" ]
obj = [ "tokio", "serde", "bincode" ]

