[package]
name = "qcomms"
version = "0.1.0"
authors = ["Jose Salazar <znx3p0@gmail.com>"]
edition = "2018"

license = "MPL-2.0"
documentation = "https://docs.rs/qcomms/"
repository = "https://github.com/znx3p0/qcomms"
description = """
qcomms is a small library that offers a simple, zero-cost message passing trait.
no async-trait.
"""

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0" }
# object
bincode = { version = "1.3" }
async-std = { version = "1" }
pin-project-lite = "0.2"
futures = "0.3"

